--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -22,6 +22,7 @@
 
 h1{
     font-size: 3rem;
+    max-width: 1200px;
 }
 
 h2{
@@ -60,4 +61,8 @@ button:hover{
 
 .hidden{
     display: none;
+}
+
+.cadena{
+    overflow-x: auto;
 }
