--- a/src/Styles/marcarError.css
+++ b/src/Styles/marcarError.css
@@ -3,13 +3,11 @@
 }
 
 #numbers-container{
-    overflow-x: scroll;
+    overflow-x: auto;
     padding: 30px 0px;
     margin: 10px 0px;
     display: flex;
     gap: 5px;
-    align-items: center;
-    justify-content: center;
 }
 
 .binary-char{
